--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
+    "css-loader": "0.28.7",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
@@ -37,6 +38,7 @@
     "react-apollo": "^0.10.0",
     "react-dom": "^15.4.2",
     "react-router": "3.0.2",
+    "style-loader": "0.19.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
   }
