add webpack config

--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.4",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.8",
+    "node-sass": "4.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-apollo": "^0.10.0",
     "react-dom": "^15.4.2",
     "react-router": "3.0.2",
+    "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
