--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
+    "react-animated-weather": "1.0.3",
     "react-apollo": "^0.10.0",
     "react-dom": "^15.4.2",
     "react-router": "3.0.2",
