--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-client": "^0.8.2",
-    "axios": "^0.15.3",
+    "axios": "0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.8",
@@ -35,6 +35,7 @@
     "file-loader": "1.1.6",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.4",
+    "halogen": "0.2.0",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.8",
