--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "nodemon index.js --ignore client",
     "start": "node index.js"
+    "webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -32,12 +33,12 @@
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
-    "extract-text-webpack-plugin": "2.1.2",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.4",
     "halogen": "0.2.0",
-    "html-webpack-plugin": "^2.26.0",
+    "html-webpack-plugin": "^2.30.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.8",
     "node-sass": "4.7.2",
@@ -50,7 +51,10 @@
     "react-router": "3.0.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
-    "webpack": "^2.2.0",
+    "webpack": "^3.10.0",
     "webpack-dev-middleware": "^1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.1"
   }
 }
