--- a/package.json
+++ b/package.json
@@ -47,13 +47,15 @@
     "babel-preset-react": "^6.22.0",
     "css-loader": "0.28.7",
     "dotenv": "^4.0.0",
-    "nodemon": "^1.14.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "img-loader": "2.0.0",
+    "node-sass": "4.7.2",
+    "nodemon": "^1.14.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "4.7.2",
+    "url-loader": "0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^1.9.0"
   }
