--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-animated-weather": "1.0.3",
     "react-apollo": "^0.10.0",
     "react-dom": "^15.4.2",
-    "react-router": "3.0.2"
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
