--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "dev": "nodemon index.js --ignore client",
     "start": "node index.js",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "build:prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -25,9 +26,9 @@
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
+    "express-graphql": "0.6.11",
     "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
+    "graphql": "0.8.2",
     "graphql-tag": "^1.2.4",
     "halogen": "0.2.0",
     "lodash": "^4.17.4",
