--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "dev": "nodemon index.js --ignore client",
     "start": "node index.js",
-    "webpack": "webpack",
-    "build:prod": "webpack -p"
+    "webpack": "webpack -p"
   },
   "author": "",
   "license": "ISC",
