--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "style-loader": "0.19.1",
     "url-loader": "0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "2.9.7"
   }
 }
