--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js --ignore client",
-    "start": "node index.js",
-    "webpack": "webpack -p"
+    "postinstall": "webpack -p",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
